# newest-zpg-bak

./: CMakeLists.txt  README.md
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  DrawableObject.hpp  Light.hpp  Main.cpp  Model.cpp  Model.hpp  ModelFactory.cpp  ModelFactory.hpp  Shader.cpp  Shader.hpp  Subject.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp
src/objects/: bushes.h  circle.h  cube.h  cube.mtl  fiona.mtl  formula1.mtl  hammer.mtl  house.mtl  plain.h  shrek.mtl  sphere.h  square.h  square.mtl  teren.mtl  toiled.mtl  tree.h  triangle.h
src/renderers/: Light.cpp  Light.hpp  Material.cpp  Material.hpp  Observer.hpp  Shader.cpp  Shader.hpp  Subject.cpp  Subject.hpp  Texture.cpp  Texture.hpp
src/scenes/: BaseScene.hpp  CorrectOneBallScene.cpp  CorrectOneBallScene.hpp  ForestScene.cpp  ForestScene.hpp  ModelScene.cpp  ModelScene.hpp  MultiShaderForestScene.cpp  MultiShaderForestScene.hpp  RandomObjectsScene.cpp  RandomObjectsScene.hpp  RotatingTriangleScene.cpp  RotatingTriangleScene.hpp  SolarSystemScene.cpp  SolarSystemScene.hpp  SymmetricalBallsScene.cpp  SymmetricalBallsScene.hpp  WhackAMoleScene.cpp  WhackAMoleScene.hpp  WrongOneBallScene.cpp  WrongOneBallScene.hpp
src/shaders/: cube_fragment.glsl  cube_vertex.glsl  frag_blinn.glsl  frag_debug.glsl  frag_green.glsl  frag_lambert.glsl  frag_lambert_textured.glsl  frag_phong.glsl  frag_phong_correct.glsl  frag_rectangle.glsl  frag_triangle.glsl  mult_blinn.glsl  mult_blinn_material.glsl  mult_lambert.glsl  mult_lambert_material.glsl  mult_phong.glsl  skybox_fragment.glsl  (+9 more)
(+9 files in other folders)
